src/objects/Integration_Status__c.object
<CustomObject>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <formula>Case_Name__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Integration Status</relationshipLabel>
        <relationshipName>Integration_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_OTC__c</fullName>
        <formula>TEXT( Case_Name__r.CSC_OTC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case OTC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product_Line__c</fullName>
        <formula>Case_Name__r.CSC_Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case_Name__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTPCode__c</fullName>
        <label>FTP Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTPMessage__c</fullName>
        <label>FTP Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Url__c</fullName>
        <label>FTP Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Code__c</fullName>
        <description>Finance_Code__c = &apos;1&apos; OR  Finance_Code__c = &apos;&apos; - Case 信息会被CSC_EBS_SendFinanceMsg.cls 抽取出来发往EBS FI</description>
        <label>Finance Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Invoke_Time__c</fullName>
        <label>Finance Invoke Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GSEM_Cloud_Flag__c</fullName>
        <formula>Case_Name__r.GSEM_flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSEM Cloud Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSEM_Flow2_Code__c</fullName>
        <description>存放SAFARI XML 生成成功或失败代码</description>
        <inlineHelpText>Safari Error
Safari Sent</inlineHelpText>
        <label>GSEM Flow2 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSEM_Flow2_Message__c</fullName>
        <description>存放GSEM调用失败时返回的消息</description>
        <label>GSEM Flow2 Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPE_Concierge_ID__c</fullName>
        <formula>Case_Name__r.HPE_EConcierge_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPE Concierge ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPE_ID__c</fullName>
        <formula>Case_Name__r.CSC_OPTId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPE ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvokeTime__c</fullName>
        <label>Close Case Invoke Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NGMS_Code__c</fullName>
        <label>NGMS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGMS_Message__c</fullName>
        <label>NGMS Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGMS_Type__c</fullName>
        <label>NGMS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NGMS-TS</fullName>
                </value>
                <value>
                    <fullName>NGMS-IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_II_Flag__c</fullName>
        <formula>Case_Name__r.Phase_II_flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase II Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Protocal__c</fullName>
        <label>Protocol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SPMS</fullName>
                </value>
                <value>
                    <fullName>SSMP</fullName>
                </value>
                <value>
                    <fullName>NGMS</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPMS_Code__c</fullName>
        <description>成功返回0，失败返回1</description>
        <inlineHelpText>成功返回0，失败返回1</inlineHelpText>
        <label>SPMS Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPMS_Message__c</fullName>
        <label>SPMS Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSMPCode__c</fullName>
        <label>SSMP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSMPMessage__c</fullName>
        <label>SSMP Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkOrder</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Integration Status</relationshipLabel>
        <relationshipName>Integration_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Integration Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Case_Name__c</columns>
        <columns>Finance_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Finance_Code__c</field>
            <operation>notEqual</operation>
            <value>0,99,5,2</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IS-{0000000000}</displayFormat>
        <label>Num</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>